--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,19 +24,21 @@ jobs:
         sanitizer: [address, thread, undefined]
     runs-on: ubuntu-latest
     steps:
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
+      - name: Clone repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Build
         run: |
           ./build.sh -t Debug -o "-DCMAKE_CXX_FLAGS=-fsanitize=${{ matrix.sanitizer }}"
       - name: Run tests
-        run: build/bin/mtx2img .github/assets/fidap005.mtx out.png
-        run: build/bin/mtx2img .github/assets/fidap005.mtx out.png -w 10
-        run: build/bin/mtx2img .github/assets/fidap005.mtx out.png -h 20
-        run: build/bin/mtx2img .github/assets/fidap005.mtx out.png -w 10 -h 20
-        run: build/bin/mtx2img .github/assets/fidap005.mtx out.png -w 10 -h 20 -c kindlmann
-        run: build/bin/mtx2img --help
+        run: |
+          build/bin/mtx2img .github/assets/fidap005.mtx out.png
+          build/bin/mtx2img .github/assets/fidap005.mtx out.png -w 10
+          build/bin/mtx2img .github/assets/fidap005.mtx out.png -h 20
+          build/bin/mtx2img .github/assets/fidap005.mtx out.png -w 10 -h 20
+          build/bin/mtx2img .github/assets/fidap005.mtx out.png -w 10 -h 20 -c kindlmann
+          build/bin/mtx2img --help
 
   package:
     needs: testrunner
@@ -44,7 +46,10 @@ jobs:
       fail-fast: false
     runs-on: ubuntu-latest
     steps:
-      uses: actions/checkout@v4
+      - name: Clone repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Build
         run: ./build.sh -t Release -i artifacts
       - name: Upload Artifact
