--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,11 +25,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Install toolchain
-        run: apt install gcc-13 g++-13
+        run: sudo apt install gcc-13 g++-13
       - name: Set toolchain
         run: |
-          update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-13 100 --slave /usr/bin/gcov gcov /usr/bin/gcov-13
-          update-alternatives --set gcc /usr/bin/gcc-13
+          sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-13 100 --slave /usr/bin/gcov gcov /usr/bin/gcov-13
+          sudo update-alternatives --set gcc /usr/bin/gcc-13
       - name: Clone repository
         uses: actions/checkout@v4
         with:
@@ -53,11 +53,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Install toolchain
-        run: apt install gcc-13 g++-13
+        run: sudo apt install gcc-13 g++-13
       - name: Set toolchain
         run: |
-          update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-13 100 --slave /usr/bin/gcov gcov /usr/bin/gcov-13
-          update-alternatives --set gcc /usr/bin/gcc-13
+          sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-13 100 --slave /usr/bin/gcov gcov /usr/bin/gcov-13
+          sudo update-alternatives --set gcc /usr/bin/gcc-13
       - name: Clone repository
         uses: actions/checkout@v4
         with:
