--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,11 @@ jobs:
         run: sudo apt install gcc-13 g++-13
       - name: Set toolchain
         run: |
-          sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-13 100 --slave /usr/bin/gcov gcov /usr/bin/gcov-13
+          sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-13 100 \
+                                   --slave /usr/bin/g++ g++ /usr/bin/g++-13       \
+                                   --slave /usr/bin/gcov gcov /usr/bin/gcov-13
           sudo update-alternatives --set gcc /usr/bin/gcc-13
+          sudo update-alternatives --set g++ /usr/bin/g++-13
       - name: Clone repository
         uses: actions/checkout@v4
         with:
@@ -56,8 +59,11 @@ jobs:
         run: sudo apt install gcc-13 g++-13
       - name: Set toolchain
         run: |
-          sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-13 100 --slave /usr/bin/gcov gcov /usr/bin/gcov-13
+          sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-13 100 \
+                                   --slave /usr/bin/g++ g++ /usr/bin/g++-13       \
+                                   --slave /usr/bin/gcov gcov /usr/bin/gcov-13
           sudo update-alternatives --set gcc /usr/bin/gcc-13
+          sudo update-alternatives --set g++ /usr/bin/g++-13
       - name: Clone repository
         uses: actions/checkout@v4
         with:
