--- a/.github/workflows/testrunner.yml
+++ b/.github/workflows/testrunner.yml
@@ -1,15 +1,17 @@
 name: CI
 
 on:
-  push:
+  pull-request:
     branches:
       - master
     paths-ignore:
       - "*.md"
       - "*.gitignore"
       - "*.txt"
+      - "!CMakeLists.txt"
       - "*.png"
       - "*.mtx"
+      - "*.mm"
   workflow_dispatch:
 
 concurrency:
@@ -47,32 +49,3 @@ jobs:
           build/bin/mtx2img .github/assets/fidap005.mtx out.png -r 10 -c kindlmann
           build/bin/mtx2img .github/assets/fidap005.mtx out.png -r 10 -c viridis
           build/bin/mtx2img --help
-
-  package:
-    needs: testrunner
-    strategy:
-      fail-fast: false
-    runs-on: ubuntu-latest
-    steps:
-      - name: Install toolchain
-        run: sudo apt install gcc-13 g++-13
-      - name: Clone repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Build
-        run: |
-          ./build.sh                                  \
-            -t Release                                \
-            -o "-DCMAKE_CXX_COMPILER=/usr/bin/g++-13" \
-            -p
-      - name: Upload binary artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: release-ubuntu
-          path: build/*Linux.zip
-      - name: Upload source artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: release-source
-          path: build/*Source.zip
