--- a/.github/workflows/testrunner.yml
+++ b/.github/workflows/testrunner.yml
@@ -1,6 +1,17 @@
 name: CI
 
 on:
+  push:
+    branches:
+      - master
+    paths-ignore:
+      - "*.md"
+      - "*.gitignore"
+      - "*.txt"
+      - "!CMakeLists.txt"
+      - "*.png"
+      - "*.mtx"
+      - "*.mm"
   pull_request:
     branches:
       - master
@@ -26,6 +37,10 @@ jobs:
         sanitizer: [address, thread, undefined]
     runs-on: ubuntu-latest
     steps:
+      - name: Install toolchain
+        run: |
+          sudo apt update
+          sudo apt install gcc-13 g++-13
       - name: Clone repository
         uses: actions/checkout@v4
         with:
@@ -34,6 +49,7 @@ jobs:
         run: |
           ./build.sh                                  \
             -t Debug                                  \
+            -o "-DCMAKE_CXX_COMPILER=/usr/bin/g++-13" \
             -o "-DCMAKE_CXX_FLAGS=-fsanitize=${{ matrix.sanitizer }}"
       - name: Run tests
         run: |
